argo-rollouts-playground-test/haproxy-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-haproxy-demo
spec:
  template: 
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: quay.io/nginx/nginx-unprivileged:stable
        #args:
        #- while true; do sleep 100; done
        #command:
        #- /bin/sh
        #- -c 
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m

  revisionHistoryLimit: 2
  replicas: 5
  strategy:
    canary:
      canaryService: argo-rollouts-canary-service 
      stableService: argo-rollouts-stable-service 
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - rollouts-demo-route  
      steps: 
      - setWeight: 30
      - pause: {}
      - analysis:
          templates:
          - templateName: success-rate
          args:
          - name: route 
            value: rollouts-demo-route
  selector: 
    matchLabels:
      app: rollouts-demo
